--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "dependencies": {
     "@cap-js/postgres": "^1.7.0",
     "@sap/cds": "^7",
+    "@sap/xssec": "^3",
     "express": "^4"
   },
   "devDependencies": {
-    "@cap-js/sqlite": "^1"
+    "@cap-js/sqlite": "^1",
+    "@sap/cds-dk": "^7.9.1"
   },
   "scripts": {
     "start": "cds-serve"
@@ -23,7 +25,8 @@
         "pool": {
           "max": 20
         }
-      }
+      },
+      "auth": "xsuaa"
     }
   }
 }
