--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   },
   "devDependencies": {
     "@cap-js/sqlite": "^1",
-    "@sap/cds-dk": "^7.9.1"
+    "@sap/cds-dk": "^7.9.1",
+    "@sap/ux-specification": "^1.120.10"
   },
   "scripts": {
-    "start": "cds-serve"
+    "start": "cds-serve",
+    "watch-cloudkitchen": "cds watch --open cloudkitchen/webapp/index.html?sap-ui-xx-viewCache=false"
   },
   "cds": {
     "requires": {
@@ -28,5 +30,8 @@
       },
       "auth": "xsuaa"
     }
-  }
+  },
+  "sapux": [
+    "app/cloudkitchen"
+  ]
 }
