--- a/package.json
+++ b/package.json
@@ -1,37 +1,50 @@
 {
-  "name": "cloudkitchen",
-  "version": "1.0.0",
-  "description": "A simple CAP project.",
-  "repository": "<Add your repository here>",
-  "license": "UNLICENSED",
-  "private": true,
-  "dependencies": {
-    "@cap-js/postgres": "^1.7.0",
-    "@sap/cds": "^7",
-    "@sap/xssec": "^3",
-    "express": "^4"
-  },
-  "devDependencies": {
-    "@cap-js/sqlite": "^1",
-    "@sap/cds-dk": "^7.9.1",
-    "@sap/ux-specification": "^1.120.10"
-  },
-  "scripts": {
-    "start": "cds-serve",
-    "watch-cloudkitchen": "cds watch --open cloudkitchen/webapp/index.html?sap-ui-xx-viewCache=false"
-  },
-  "cds": {
-    "requires": {
-      "db": {
-        "impl": "@cap-js/postgres",
-        "pool": {
-          "max": 20
+    "name": "cloudkitchen",
+    "version": "1.0.0",
+    "description": "A simple CAP project.",
+    "repository": "<Add your repository here>",
+    "license": "UNLICENSED",
+    "private": true,
+    "dependencies": {
+        "@cap-js/postgres": "^1.7.0",
+        "@sap/cds": "^7",
+        "@sap/xssec": "^3",
+        "express": "^4"
+    },
+    "devDependencies": {
+        "@cap-js/sqlite": "^1",
+        "@sap/cds-dk": "^7.9.1",
+        "@sap/ux-specification": "^1.120.11",
+        "rimraf": "^3.0.2"
+    },
+    "scripts": {
+        "start": "cds-serve",
+        "watch-cloudkitchen": "cds watch --open cloudkitchen/webapp/index.html?sap-ui-xx-viewCache=false",
+        "watch-kitchen": "cds watch --open kitchen/webapp/index.html?sap-ui-xx-viewCache=false",
+        "undeploy": "cf undeploy CloudKitchen --delete-services --delete-service-keys --delete-service-brokers",
+        "build": "rimraf resources mta_archives && mbt build --mtar archive",
+        "deploy": "cf deploy mta_archives/archive.mtar --retries 1"
+    },
+    "cds": {
+        "requires": {
+            "db": {
+                "impl": "@cap-js/postgres",
+                "pool": {
+                    "max": 20
+                }
+            },
+            "auth": {
+                "auth": {
+                    "strategy": "mock"
+                },
+                "[production]": {
+                    "strategy": "JWT"
+                }
+            },
+            "kind": "xsuaa"
         }
-      },
-      "auth": "xsuaa"
-    }
-  },
-  "sapux": [
-    "app/cloudkitchen"
-  ]
+    },
+    "sapux": [
+        "app/kitchen"
+    ]
 }
